--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,6 @@ services:
       - ./index.html:/usr/share/nginx/html/index.html:ro
       - ./style.css:/usr/share/nginx/html/style.css:ro
       - ./main.js:/usr/share/nginx/html/main.js:ro
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
     restart: unless-stopped
 
