feat: segregação de pastas

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,7 @@
 server {
-    listen 80;
-    listen [::]:80;
-    server_name www.3htec.com.br 3htec.com.br;
+    listen 80 default_server;
+    listen [::]:80 default_server;
+    server_name www.3htec.com.br 3htec.com.br _;
 
     root /usr/share/nginx/html;
     index index.html;
